# plant-disease-detection

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: base.yaml  efficientnetb0.yaml  mobilenetv2.yaml  resnet50.yaml
datasets/: __init__.py  loaders.py  plantdoc.py  plantvillage.py  transforms.py
evaluation/: __init__.py  evaluator.py  metrics.py
explainability/: __init__.py  comparison.py  gradcam.py  sample_selector.py
models/: __init__.py  checkpoint.py  model_factory.py
outputs/: plantvillage_class_distribution.csv  plantvillage_eda_summary.csv  plantvillage_image_sizes.csv
outputs/evaluation_artifacts/: per_class_accuracy_mobilenetv2.csv  per_class_accuracy_resnet50.csv  predictions_efficientnet_b0.csv  predictions_mobilenetv2.csv  predictions_resnet50.csv  report_efficientnet_b0.json  report_mobilenetv2.json  report_resnet50.json  test_summary.csv
scripts/: compare_domains.py  download_data.py  evaluate.py  generate_figures.py  generate_gradcam.py  prepare_datasets.py  train.py
tests/: test_datasets.py  test_evaluation.py  test_gradcam.py  test_models.py
training/: __init__.py  trainer.py
utils/: __init__.py  config.py  logging_utils.py  reproducibility.py
visualization/: __init__.py  confusion_matrices.py  performance_charts.py  style.py  training_curves.py
