[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "plant-disease-domain-shift"
version = "0.1.0"
description = "Cross-dataset generalization analysis for plant disease detection under domain shift"
requires-python = ">=3.10"
dependencies = []  # managed via requirements.txt

[tool.setuptools.packages.find]
where = ["."]
include = ["datasets*", "models*", "training*", "evaluation*", "explainability*", "visualization*", "utils*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
